--- a/app/src/main/res/drawable/shenshu_ripple.xml
+++ b/app/src/main/res/drawable/shenshu_ripple.xml
@@ -2,7 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--正常状态的显示效果-->
-    <item  android:state_pressed="false" android:drawable="@drawable/shenshu_button" />
+    <item  android:state_pressed="false">
+        <shape>
+            <solid android:color="#fff"/>
+        </shape>
+    </item>
     <item android:state_pressed="true" >
         <shape>
             <solid android:color="@color/activity_bg"/>
