--- a/app/src/main/res/layout/home_sidebar_item.xml
+++ b/app/src/main/res/layout/home_sidebar_item.xml
@@ -132,7 +132,7 @@
         android:gravity="center_vertical"
         android:drawablePadding="27dp"
         android:drawableLeft="@drawable/setting"
-        android:text="@string/setting_label"
+        android:text="关于我们"
         android:textColor="#a2000000"
         android:textSize="15sp"/>
     <TextView
